Refactor ClusterPersistRepositoryException (#21210)
* Refactor ClusterPersistRepositoryException

* Fix test case